@@ -189,7 +189,7 @@
 
             <QuestionView
               v-else-if="quizState === 'questions' && currentQuestion && currentGroup"
-              :question-data="{ ...currentQuestion, type: currentSection.name, passage: currentGroup.passage }"
+              :question-data="{ ...currentQuestion, type: currentSection.name, passage: currentGroup.passage, groupAudio: currentGroup.audioUrl }"
               :question-number="currentQuestionIndex + 1"
               :total-questions="currentGroup.questions.length"
               :is-first="isFirstQuestionOfSection"
